[tool.poetry]
name = "financial-calculators"
version = "0.1.0"
description = "A web application with various financial calculators"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.1"
flask-cors = "^4.0.0"
numpy = "^1.21.0"
scipy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
